# Rikkyo-MasterPJ

./: .gitattributes  .gitignore  README.md  board.ps1  init.ps1  learn.ps1  pyproject.toml
.github/workflows/: static.yml
Master-Simulator/Assets/Agents/Demo/: DemoAgent.cs  Target.mat
Master-Simulator/Assets/Drone/Scripts/: Constants.cs  DroneAgent.cs  DroneController.cs  DroneNavAgent.cs  NavController.cs  PhysicsController.cs  Utils.cs
Master-Simulator/Assets/Models/0/: configuration.yaml
Master-Simulator/Assets/Scenes/: SampleScene.unity  Yokosuka.unity  test1.0-Nav.unity  test1.0.unity  test1.1.unity
Master-Simulator/Assets/Scenes/Yokosuka/: NavMesh-52397524_tran_6697_op.gml.asset  NavMesh-52397533_tran_6697_op.gml 1.asset  NavMesh-52397533_tran_6697_op.gml 2.asset  NavMesh-52397533_tran_6697_op.gml 3.asset  NavMesh-52397533_tran_6697_op.gml 4.asset  NavMesh-52397533_tran_6697_op.gml 5.asset  NavMesh-52397533_tran_6697_op.gml.asset  NavMesh-52397534_tran_6697_op.gml 1.asset  NavMesh-52397534_tran_6697_op.gml.asset  NavMesh-52397543_tran_6697_op.gml 1.asset  NavMesh-52397543_tran_6697_op.gml.asset  NavMesh-SubTran (1).asset  NavMesh-SubTran.asset  (+212 more)
Master-Simulator/Assets/Scripts/: EnvManager.cs  Evacuee.cs  FieldEnvManager.cs  PLATEAUEnvManager.cs  Tower.cs
Master-Simulator/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Master-Simulator/config/: model-demo.yaml  test1_0.yaml  test1_0_nav.yaml
Master-Simulator/public/: index.html
Master-Simulator/public/TemplateData/: style.css
src/rikkyo_masterpj/: __init__.py
(+153 files in other folders)
