[project]
name = "rikkyo-masterpj"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tsyu12345", email = "syukut@gmail.com" }
]
dependencies = [
    "mlagents>=0.28.0",
    "torch==2.2.2",
    "torchvision==0.17.2", 
    "torchaudio==2.2.2"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rikkyo_masterpj"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"

